--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
     </header>
     <main>
       <img src="me.png">
-      <h1>Your name here</h1>
+      <h1>Haylem</h1>
       <p>
-        Here's a good place to write a little bit about yourself.
-        Include anything you want people to know about you.
+        I'm studying a Bachelor of Science at VUW while tutoring part time at Inspiration Education. 
       </p>
       <p>
-         Intelligentsia dreamcatcher chartreuse franzen sartorial ugh. Whatever
-         brunch asymmetrical tousled occupy before they sold out, distillery VHS
-         fingerstache salvia church-key readymade listicle. Craft beer skateboard
-         hella, hoodie brooklyn.
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut lectus tempus, auctor dui at, facilisis urna. In elementum molestie volutpat. Pellentesque maximus felis quis urna facilisis ornare. Morbi posuere libero id maximus tempus. Ut euismod sagittis libero ultricies iaculis. Praesent fringilla sagittis faucibus
       </p>
       <ul class="social">
 
