--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
       <ul class="social">
 
-        <li><a rel="github" href="http://github.com/powershop">My code</a></li>
+        <li><a rel="github" href="http://github.com/raynerhayl">My code</a></li>
         <li><a rel="home" href="http://example.com">My website</a></li>
         <li><a rel="twitter" href="http://twitter.com/powershop">@powershop</a></li>
       </ul>
